--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "zen-mandala2",
+	"name": "zen-mandala",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@pixi/canvas-renderer": "^7.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -23,11 +24,19 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.70.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@pixi/graphics-extras": "^7.4.0",
+		"@pixi/graphics-smooth": "^1.1.0",
+		"@pixi/math-extras": "^7.4.0",
+		"pixi-filters": "^5.2.1",
+		"pixi.js": "^7.4.0"
+	}
 }
